# v

./: qcar.rviz
ur_ws/: frames_2025-09-03_13.57.37.gv
ur_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ur_ws/log/: latest_build
ur_ws/src/ur3e_spawn_gripper_moveit_config/: .setup_assistant  CMakeLists.txt
ur_ws/src/ur3e_spawn_gripper_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  ros2_controllers.yaml  ur.ros2_control.xacro  ur.srdf  ur.urdf.xacro
ur_ws/src/ur3e_spawn_gripper_moveit_config/launch/: demo.launch.py  demo_with_controllers.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur_ws/src/ur_admittance/: CMakeLists.txt  package.xml
ur_ws/src/ur_admittance/rviz/: ur3e_admittance.rviz
ur_ws/src/ur_sim/: CMakeLists.txt  package.xml  setup.py
ur_ws/src/ur_sim/config/: admittance_controller.yaml  ft_sensor_broadcaster_controller.yaml  ur3e_controllers.yaml  ur3e_controllers_gripper.yaml
ur_ws/src/ur_sim/launch/: admittance_control.launch.py  simple_admittance.launch.py  spawn_ur3e_gripper.launch.py  test_admittance_control.launch.py  ur3e_admittance_control.launch.py
ur_ws/src/ur_sim/resource/: ur_sim
ur_ws/src/ur_sim/rviz/: view_ur3e_spawn_gripper.rviz
ur_ws/src/ur_sim/scripts/: simple_admittance_controller.py
ur_ws/src/ur_sim/ur_sim/: apply_force.py
ur_ws/src/ur_sim/urdf/: ft_sensor_sim.ros2_control.xacro  ur3e_macro.xacro  ur3e_robot_with_ft.urdf.xacro
(+390 files in other folders)
