<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_sim</name>
  <version>0.0.0</version>
  <description>Universal Robot simulation package</description>
  <maintainer email="chintu@todo.todo">chintu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>xacro</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="/home/chintu/ur_ws/install/ur_sim/share/"/>
    <gazebo_ros gazebo_model_path="/home/chintu/ur_ws/install/robotiq_description/share/"/>
    <gazebo_ros gazebo_model_path="${prefix}/share"/>
  </export>
</package>
